<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scanforest</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_report_incident">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plague">Plaga</string>
    <string name="fire">Fire</string>
    <string name="report_incident">ReportIncident</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="userName">User Name</string>
    <string name="Register">Sign up</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirmation</string>
    <string name="required_user_login">The user Name and password are required</string>
    <string name="user_type">User Type: </string>
    <string name="description">Description</string>
    <string name="magnitude">Magnitude</string>
    <string name="area">Area</string>
    <string name="pictures">Pictures</string>
    <string name="take_picture">Take Picture</string>
    <string name="send">Send</string>
    <string name="alert_type">Alert Type</string>
    <string name="description_hint">Description of the alert to Report</string>
    <string name="alert_reported">Alert Reported</string>
    <string name="an_error_occured">Sorry, Something went wrong</string>
    <string name="location_not_setted">The location hasn\'t been setted.</string>

    <string-array name="user_types">
        <item>Technitian</item>
        <item>Normal</item>
    </string-array>
    <string-array name="alert_types">
        <item>fire</item>
        <item>logging</item>
        <item>pest</item>
    </string-array>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="image_upload_error">There was an error while uploading image</string>
    <string name="log_out">Log out</string>
    <string name="first_Name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cellphone">Cellphone</string>
    <string name="title_activity_view_alert">ViewAlertActivity</string>
    <string name="location">Location</string>
    <string name="logging">Logging</string>
    <string name="pest">Pest</string>
    <string name="severe">Severe</string>
    <string name="slight">Slight</string>
    <string name="moderate">Moderate</string>
    <string name="moderate_severe">Moderately Severe</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="technician">Technician</string>
    <string name="normal">Normal</string>
    <string name="firt_name_required">The first name is required</string>
    <string name="last_name_required">The last name is required</string>
    <string name="user_name_required">The email is required</string>
    <string name="password_required">The password is required</string>
    <string name="password_not_match">The password and the confirmation password don\'t match</string>
    <string name="invalid_email">The email is not valid</string>
    <string name="area_required">The area is required</string>
    <string name="magnitude_required">The Magnitude is required</string>
    <string name="type_required">The type of alert is required</string>
    <string name="picture_required">A picture of the incident is required</string>
    <string name="description_required">A description of the incident is required</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_details">View Details</string>

</resources>
